[gd_scene load_steps=11 format=2]

[ext_resource path="res://dataFiles/img/logo.png" type="Texture" id=1]
[ext_resource path="res://dataFiles/img/displayManager.png" type="Texture" id=2]
[ext_resource path="res://dataFiles/theme.tres" type="Theme" id=3]
[ext_resource path="res://dataFiles/menus/script/mainMenu.gd" type="Script" id=4]
[ext_resource path="res://dataFiles/menus/options.tscn" type="PackedScene" id=5]
[ext_resource path="res://dataFiles/menus/credit.tscn" type="PackedScene" id=6]
[ext_resource path="res://dataFiles/menus/info.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 1280, 720 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0340354, 0.00121403, 0.0654297, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 270, 280 )

[node name="mainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="bg" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Control" type="Control" parent="bg"]
margin_left = 375.0
margin_top = 34.0
margin_right = 675.0
margin_bottom = 562.0
rect_min_size = Vector2( 300, 528 )

[node name="bg" type="Panel" parent="bg/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="bg/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="bg/Control/ScrollContainer"]
margin_right = 290.0
margin_bottom = 618.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="logo" type="Panel" parent="bg/Control/ScrollContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
custom_styles/panel = SubResource( 3 )

[node name="startgame" type="Button" parent="bg/Control/ScrollContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 290.0
margin_bottom = 353.0
theme = ExtResource( 3 )
text = "Start Game"

[node name="options" type="Button" parent="bg/Control/ScrollContainer/VBoxContainer"]
margin_top = 357.0
margin_right = 290.0
margin_bottom = 406.0
theme = ExtResource( 3 )
text = "Options"

[node name="info" type="Button" parent="bg/Control/ScrollContainer/VBoxContainer"]
margin_top = 410.0
margin_right = 290.0
margin_bottom = 459.0
theme = ExtResource( 3 )
text = "Info Game"

[node name="credit" type="Button" parent="bg/Control/ScrollContainer/VBoxContainer"]
margin_top = 463.0
margin_right = 290.0
margin_bottom = 512.0
theme = ExtResource( 3 )
text = "Credit"

[node name="window" type="Button" parent="bg/Control/ScrollContainer/VBoxContainer"]
visible = false
margin_top = 463.0
margin_right = 290.0
margin_bottom = 512.0
theme = ExtResource( 3 )
text = "Window"

[node name="fullscreen" type="Button" parent="bg/Control/ScrollContainer/VBoxContainer"]
margin_top = 516.0
margin_right = 290.0
margin_bottom = 565.0
theme = ExtResource( 3 )
text = "Full Screen"

[node name="exit" type="Button" parent="bg/Control/ScrollContainer/VBoxContainer"]
margin_top = 569.0
margin_right = 290.0
margin_bottom = 618.0
theme = ExtResource( 3 )
text = "Exit Game"

[node name="options" parent="." instance=ExtResource( 5 )]

[node name="credit" parent="." instance=ExtResource( 6 )]

[node name="info" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="bg/Control/ScrollContainer/VBoxContainer/startgame" to="." method="_on_startgame_pressed"]
[connection signal="pressed" from="bg/Control/ScrollContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="bg/Control/ScrollContainer/VBoxContainer/info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="bg/Control/ScrollContainer/VBoxContainer/credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="bg/Control/ScrollContainer/VBoxContainer/window" to="." method="_on_window_pressed"]
[connection signal="pressed" from="bg/Control/ScrollContainer/VBoxContainer/fullscreen" to="." method="_on_full_screen_pressed"]
[connection signal="pressed" from="bg/Control/ScrollContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
